rnsc/test_data/rns_integration/error/parser/type_hints/methodref/no_operand_3_recovers.rns
.class   @methodref MyClass methodName
blabla ; <- should be still reported as an error